Added rolling stock couplers field
