# Src/Application/Catalog/CatalogItems/RollingStockInputValidator.cs
@@ -41,6 +41,9 @@ namespace TreniniDotNet.Application.Catalog.CatalogItems
 
             RuleFor(x => x.Control)
                 .IsEnumName(typeof(Control), caseSensitive: false);
+
+            RuleFor(x => x.Couplers)
+                .IsEnumName(typeof(Couplers), caseSensitive: false);
         }
     }
 }
