# Src/Infrastructure/Persistence/Catalog/CatalogItems/CatalogItemWithRelatedData.cs
@@ -35,6 +35,7 @@ namespace TreniniDotNet.Infrastructure.Persistence.Catalog.CatalogItems
         public string? road_number { get; set; }
         public string? type_name { get; set; }
         public string? livery { get; set; }
+        public string? couplers { get; set; }
         public string? dcc_interface { get; set; }
         public string? control { get; set; }
         public string? passenger_car_type { get; set; }
