# Src/Web/swagger.json
@@ -3930,6 +3930,10 @@
             "type": "string",
             "nullable": true
           },
+          "couplers": {
+            "type": "string",
+            "nullable": true
+          },
           "livery": {
             "type": "string",
             "nullable": true
@@ -4010,6 +4014,10 @@
             "nullable": true
           },
           "roadNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "couplers": {
             "type": "string",
             "nullable": true
           },
@@ -4143,6 +4151,10 @@
             "nullable": true
           },
           "livery": {
+            "type": "string",
+            "nullable": true
+          },
+          "couplers": {
             "type": "string",
             "nullable": true
           },
